WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2003-12-26


Version 0.0.4 (under dev!):
   * Perl plugin, with auto-load
   * Ctrl-C now intercepted (ignored)
   * debug messages can be enabled via ./configure --enbale-debug option

Version 0.0.3 (2003-11-03):
   * ./configure script to build WeeChat
   * nicks are now correctly sorted (op, halfop, voice, other)
   * fixed problem with '353' IRC message (nicklist)
   * fixed problem when nick is truncated by server
   * fixed crash when entering text without any server connection
   * fixed crash when /set command is executed
   * fixed display bug (text was blinking when scrolling)
   * french translation
   * new IRC command: /stats, /service, /squit, /motd, /lusers, /links, /time,
     /trace, /admin, /info, /servlist, /squery, /who, /whowas, /die, /summon,
     /users, /wallops, /userhost, /ison, /ctcp ping
   * code cleanup

Version 0.0.2 (2003-10-05):
   * added commands /rehash and /restart
   * command & auto-join channels when connected to server
   * new commands for alias: /alias, /unalias (new section in config file)
   * config is now saved automatically when quitting WeeChat, /save command added
   * new commands for servers: /server, /connect, /disconnect
   * added autoconnect flag for each server in config file
   * added "look_set_title" option in config file
   * term window title is modified with WeeChat name and version
   * fixed nicklist display bug
   * fixed crash when sending command which can only be received
   * CTCP version returns more info (about OS)

Version 0.0.1 (2003-09-27):
   * ncurses GUI with color output
   * multi-servers
   * channel windows, with nicklist (position: top, bottom, left or right)
   * private windows
   * IRC commands: away, ctcp, deop, devoice, invite, join, kick, kill, list,
     me, mode, msg, names, nick, notice, op, oper, part, ping, pong, quit,
     quote, topic, version, voice, whois